// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component OfflineSnackbar renders back online snackbar 1`] = `
<div>
  <div
    class="offlineSnackbar"
  >
    <div
      class="MuiSnackbar-root MuiSnackbar-anchorOriginBottomLeft css-1ahi5tg-MuiSnackbar-root"
      role="presentation"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation6 MuiSnackbarContent-root css-1m6bcyw-MuiPaper-root-MuiSnackbarContent-root"
        direction="up"
        role="alert"
        style="--Paper-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12); opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <div
          class="MuiSnackbarContent-message css-ozrxnr-MuiSnackbarContent-message"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-js8yfx-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
            />
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              style="margin-right: 24px;"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-7wnotg-MuiSvgIcon-root"
                data-testid="LinkIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1M8 13h8v-2H8zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5"
                />
              </svg>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
            >
              Your connection is back online
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component OfflineSnackbar renders back online snackbar 2`] = `
<div>
  <div
    class="offlineSnackbar"
  />
</div>
`;

exports[`Component OfflineSnackbar renders hidden (open: false) snackbar 1`] = `
<div>
  <div
    class="offlineSnackbar"
  />
</div>
`;

exports[`Component OfflineSnackbar renders offline snackbar 1`] = `
<div>
  <div
    class="offlineSnackbar"
  >
    <div
      class="MuiSnackbar-root MuiSnackbar-anchorOriginBottomLeft css-1ahi5tg-MuiSnackbar-root"
      role="presentation"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation6 MuiSnackbarContent-root css-1m6bcyw-MuiPaper-root-MuiSnackbarContent-root"
        direction="up"
        role="alert"
        style="--Paper-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12); opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <div
          class="MuiSnackbarContent-message css-ozrxnr-MuiSnackbarContent-message"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-js8yfx-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
            />
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              style="margin-right: 24px;"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1b7vqe0-MuiSvgIcon-root"
                data-testid="LinkOffIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 7h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1 0 1.43-.98 2.63-2.31 2.98l1.46 1.46C20.88 15.61 22 13.95 22 12c0-2.76-2.24-5-5-5m-1 4h-2.19l2 2H16zM2 4.27l3.11 3.11C3.29 8.12 2 9.91 2 12c0 2.76 2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1 0-1.59 1.21-2.9 2.76-3.07L8.73 11H8v2h2.73L13 15.27V17h1.73l4.01 4L20 19.74 3.27 3z"
                />
              </svg>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
            >
              Your connection is offline
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
